# MoR

./: .gitignore  README.md  hermes  opus  pyproject.toml
books/: EVANGELISMS.md  GENESIS.md  THE_ALCHEMIST.md  THE_ELEVENTH.md  THE_FOUNDING.md  THE_REALM.md  THE_TENTH.md  THE_TWELFTH.md
hermes/: __main__.py  agent.py  almanac.py  catalog.py  checkpoint.py  cli.py  compaction.py  config.py  confirm.py  directives.py  go_state.py  go_worker.py  hosts.py  http_policy.py  llm.py  magazine.py  models.py  package.py  paths.py  project.py  retrospect.py  skills.py  ssh.py  subagent.py  ui.py
hermes/gpu/: __init__.py  provision.py  ssh.py  vast.py
hermes/prompts/: almanac.md  attempt.md  compact.md  magazine.md  phantom.md  reconcile.md  reflect.md  retrospect.md  skills_nudge.md  stall.md  stuck_guard.md  subagent.md  summary.md  system.md  time_wrapup.md  verifier.md  verify_before_done.md  wrapup.md
hermes/sandbox/: __init__.py  exec.py  local.py  provision.py  village.py
hermes/toolbox/: base64_codec.py  download_file.py  extract_code.py  git_ops.py  html_to_text.py  json_query.py  pdf_text.py  replicate.py  todo.py  transfer.py
hermes/tools/: __init__.py  _common.py  almanac_tools.py  base.py  catalog_tools.py  delegate.py  dialogue.py  hosts.py  local_fs.py  local_shell.py  magazine_tools.py  meta.py  readonly.py  remote.py  sandbox_tools.py  self_build.py  skills.py  web.py
mor/: __init__.py  __main__.py  agents.py  checkpoint.py  cli.py  config.py  directives.py  forge.py  gpu.py  grimoire.py  hall.py  juice.py  map_topology.py  mind.py  models.py  ontology.py  realm.py  recall.py  scheduler.py  skills.py  source.py  territory.py  ui.py  world.py
mor/engine/: __init__.py  backend.py  compaction.py  dome.py  loop.py  tools.py
tests/: conftest.py  test_engine.py  test_grimoire.py  test_hardening.py  test_map_topology.py  test_realm.py  test_stability.py  test_tier1.py  test_tier2.py  test_tier3.py  test_tier4.py  test_v8.py  test_v81.py  test_v82.py
