[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mor"
version = "0.1.0"
description = "Masters of the Realm — a dome of embodied agents (Wizard, General, Warrior) you rule from on top."
readme = "README.md"
requires-python = ">=3.9"
# No third-party dependencies: the realm runs on the Python standard library.
# The offline mind needs nothing; the served mind talks to your endpoint over
# stdlib urllib.
dependencies = []

# The installable command is `mor` — NOT `hermes`. MoR must never clobber the
# real Hermes harness (and its `gpu serve`), which owns the `hermes` command.
# For the in-realm "type hermes" feel, use the local ./hermes wrapper instead.
[project.scripts]
mor = "mor.cli:main"

[tool.setuptools.packages.find]
include = ["mor*"]
