[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "mor"
version = "0.1.0"
description = "Masters of the Realm — a dome of embodied agents built on the Hermes engine."
readme = "README.md"
requires-python = ">=3.10"
# MoR ships the vendored Hermes engine (hermes/), so it carries Hermes's deps.
dependencies = [
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pypdf>=4.0"]

# The command is `opus` — never `hermes`. The vendored Hermes engine is the mind
# under the realm; the realm is what the operator drives.
[project.scripts]
opus = "mor.cli:main"

[tool.setuptools.packages.find]
include = ["mor*", "hermes*"]

[tool.setuptools.package-data]
hermes = ["prompts/*.md", "toolbox/*.py"]
