[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "mor"
version = "0.8.2"
description = "Masters of the Realm — a dome of embodied agents, standing on its own engine."
readme = "README.md"
requires-python = ">=3.10"
# MoR runs on the Python standard library. Nothing to install.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# The command is `opus` — a *work*, and a wink to whose it is. Never `hermes`, so it
# can't collide with the old harness.
[project.scripts]
opus = "mor.cli:main"

[tool.setuptools.packages.find]
include = ["mor*"]
